--- a/sk2.html
+++ b/sk2.html
@@ -2586,19 +2586,19 @@ hJPQ ADCONER
 &#9755;&#9755;DEF &beta;&#9635;A&times;B&times;C&times;D&times;E&times;F&times;G&times;H&times;I,&alpha;
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=61 doc_page=211 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=61 doc_page=211 type=macros proof=1]
 [Page header: "HHL APY5 012"]
 
 REX <sub>&beta;</sub>*{0<sub>&alpha;</sub>}
-RSX<sub>&beta;</sub>*{LIST+I<sub>&beta;</sub>}+(I^(370.))
-RSX<sub>&beta;</sub>*{LIST+H<sub>&beta;</sub>}+(H^(370.))
-RSX<sub>&beta;</sub>*{LIST+G<sub>&beta;</sub>}+(G^(370.))
-RSX<sub>&beta;</sub>*{LIST+F<sub>&beta;</sub>}+(F^(370.))
-RSX<sub>&beta;</sub>*{LIST+E<sub>&beta;</sub>}+(E^(370.))
-RSX<sub>&beta;</sub>*{LIST+D<sub>&beta;</sub>}+(D^(370.))
-RSX<sub>&beta;</sub>*{LIST+C<sub>&beta;</sub>}+(C^(370.))
-RSX<sub>&beta;</sub>*{LIST+B<sub>&beta;</sub>}+(B^(370.))
-RSX<sub>&beta;</sub>*{LIST+A<sub>&beta;</sub>}+(A^(370.))
+RSX<sub>&beta;</sub>*{LIST+I<sub>&beta;</sub>}+(I^(370,))
+RSX<sub>&beta;</sub>*{LIST+H<sub>&beta;</sub>}+(H^(370,))
+RSX<sub>&beta;</sub>*{LIST+G<sub>&beta;</sub>}+(G^(370,))
+RSX<sub>&beta;</sub>*{LIST+F<sub>&beta;</sub>}+(F^(370,))
+RSX<sub>&beta;</sub>*{LIST+E<sub>&beta;</sub>}+(E^(370,))
+RSX<sub>&beta;</sub>*{LIST+D<sub>&beta;</sub>}+(D^(370,))
+RSX<sub>&beta;</sub>*{LIST+C<sub>&beta;</sub>}+(C^(370,))
+RSX<sub>&beta;</sub>*{LIST+B<sub>&beta;</sub>}+(B^(370,))
+RSX<sub>&beta;</sub>*{LIST+A<sub>&beta;</sub>}+(A^(370,))
 &#9755;&#9755;EMD
 
 &#9755;&#9755;DEF LTAKE&equiv;N&times;XR
@@ -2640,7 +2640,7 @@ RSX<sub>&beta;</sub>*{LIST+A<sub>&beta;</sub>}+(A^(370.))
 &#9755;&#9755;EMD
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=62 doc_page=212 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=62 doc_page=212 type=macros proof=1]
 [Page header: "HHL APY5 013"]
 
 &#9755;&#9755;DEF PUTR&equiv;N&times;XR&rarr;M&times;XR2
@@ -2692,11 +2692,11 @@ RSX<sub>&beta;</sub>*{LIST+A<sub>&beta;</sub>}+(A^(370.))
 		<sup>1</sup><sup>1</sup>RSX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
 		<sup>2</sup>EXX<sub>T</sub><sub>|</sub><sub>S</sub>LIST
 		<sup>2</sup>DPX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
-		[Problem: the following line is present in earlier def, but not in this one, clipped by the bottom margin? Compare with COMBL above.]
-		<sup>1</sup>DPX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
+		[Possible problem: the following line is present in earlier def, but not in this one, clipped by the bottom margin? Compare with COMBL above.]
+		[<sup>1</sup>DPX<sub>T</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1]
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=63 doc_page=213 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=63 doc_page=213 type=macros proof=1]
 [Page header: "HHL APY5 014"]
 
 &#9755;&#9755;EMD
@@ -2743,12 +2743,12 @@ LGORRI0&rarr;		<sup>1</sup><sup>6</sup>RSX<sub>X</sub><sub>R</sub><sub>|</sub><s
 		h<sup>-</sup><sup>1</sup>JNX<sub>X</sub><sub>R</sub>#+2
 		<sup>1</sup>SKX<sub>X</sub><sub>R</sub>1
 		INX<sub>X</sub><sub>R</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
-GORRI1&rarr;		SXD<sub>X</sub><sub>R</sub>#      ** MODIFIED
+LGORRI1&rarr;		SXD<sub>X</sub><sub>R</sub>#      ** MODIFIED
 		hJPQ GORRIEXIT+(GORRIEXIT/GORRIEXIT&#9419;1&times;(LGORRIEND+1))
 		<sup>1</sup>DPX<sub>X</sub><sub>R</sub><sub>2</sub>LGORRI2
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=64 doc_page=214 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=64 doc_page=214 type=macros proof=1]
 [Page header: "HHL APY5 015"]
 
 		<sup>1</sup><sup>1</sup>RSX<sub>X</sub><sub>R</sub><sub>2</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST       **CURRENT NEXT
@@ -2802,7 +2802,7 @@ SUBR1&rarr;		JPQ #
 &#9755;&#9755;DEF SOLVEM|K
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=65 doc_page=215 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=65 doc_page=215 type=macros proof=1]
 [Page header: "HHL APY5 016"]
 
 		<sup>1</sup>STE SLVDR
@@ -2814,7 +2814,7 @@ SUBR1&rarr;		JPQ #
 		<sup>1</sup>DPX<sub>x</sub><sub>2</sub>SLVT5-1
 		INX<sub>x</sub><sub>2</sub>(K+1)&times;(K-1)+1
 		<sup>1</sup>DPX<sub>x</sub><sub>2</sub>SLVTR
-		<sup>1</sup>DPX<sub>x</sub><sub>1</sub>SLVTR2
+		<sup>1</sup>DPX<sub>x</sub><sub>2</sub>SLVTR2
 		<sup>1</sup>STA SLVT5	**N(K+1)
 		<sup>1</sup>SUB SLVT6
 		<sup>1</sup>STA SLVT5+1	**N(K+1)-1
@@ -2851,13 +2851,13 @@ SLVR1&rarr;		RSX<sub>x</sub><sub>2</sub>SLVT5-1
 		JPA SLVR2
 		<sup>1</sup>REX<sub>y</sub><sub>1</sub>1	**SINGULAR
 		<sup>1</sup>ADX<sub>y</sub><sub>1</sub>SLVTS
-		JPQ SLVR5+?
+		JPQ SLVR5+5
 SLVR2&rarr;		STA SLVTY
 SLVR3&rarr;		SXD<sub>x</sub><sub>1</sub><sub>|</sub><sub>x</sub><sub>2</sub>
 		JPQ SLVR5+2
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=66 doc_page=216 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=66 doc_page=216 type=macros proof=1]
 [Page header: "HHL APY5 017"]
 
 		LDA<sub>x</sub><sub>1</sub>*SLVTP
@@ -2909,10 +2909,10 @@ SLVR5&rarr;		REX<sub>y</sub><sub>1</sub><sub>|</sub><sub>x</sub><sub>1</sub>
 		<sup>1</sup>ADX<sub>x</sub><sub>3</sub>SLVTR2
 		<sup>-</sup><sup>1</sup>JPX<sub>x</sub><sub>1</sub>SLVR1
 		LDA {K+1,,(K+1)&times;K}
-		RSX<sub>x</sub><sub>3</sub>SLVT?-1
+		RSX<sub>x</sub><sub>3</sub>SLVT5-1 [best guess: SLVT5, may also be SLVT6 (pretty smudged)]
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=67 doc_page=217 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=67 doc_page=217 type=macros proof=1]
 [Page header: "HHL APY5 020"]
 
 		STA<sub>x</sub><sub>3</sub>
@@ -2928,7 +2928,7 @@ SLVD1&rarr;		LDA<sub>x</sub><sub>2</sub>K
 		SAB SLVTX
 		DIV<sub>x</sub><sub>1</sub><sub>|</sub><sub>x</sub><sub>2</sub>
 		JOV SLVD3
-SLVD2&rarr;		STA<sub>x</sub><sub>1</sub>zbp<sub>x</sub><sub>3</sub>K+1&times;K+1	**FINAL ANSWER
+SLVD2&rarr;		STA<sub>x</sub><sub>1</sub><sub>|</sub><sub>x</sub><sub>3</sub>K+1&times;K+1	**FINAL ANSWER
 		DEX<sub>x</sub><sub>2</sub>K+1
 		<sup>-</sup><sup>1</sup>JPX<sub>x</sub><sub>1</sub>SLVD1
 		REX<sub>x</sub><sub>1</sub>K-1
@@ -2958,7 +2958,7 @@ SLVAD&rarr;		REX<sub>x</sub><sub>1</sub>K-1	**COUNT DIAG
 		<sup>1</sup>DPX<sub>y</sub><sub>1</sub>SLVAD6+1	**TO GET POINT VALUE [really 6?]
 		INX<sub>y</sub><sub>1</sub>(K+1)&times;K	**Y1 AT LAST ROW
 SLVAD1&rarr;		LDA<sub>x</sub><sub>1</sub><sub>|</sub><sub>y</sub><sub>1</sub>	**DIAGONAL
-		JPQ SLVAD4
+		JPA SLVAD4
 		JNA SLVAD4
 		LDA {100,}
 		STA<sub>y</sub><sub>1</sub>K	**PUT FUTURE DIAG IN CONSTANT
@@ -2967,7 +2967,7 @@ SLVAD1.5&rarr;	REX<sub>x</sub><sub>2</sub>K-1	**COUNT COLUMNS
 		INX<sub>x</sub><sub>3</sub>(K-1)&times;(K+1)+1
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=68 doc_page=218 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=68 doc_page=218 type=macros proof=1]
 [Page header: "HHL APY5 021"]
 
 SLVAD2&rarr;		LDA<sub>x</sub><sub>2</sub><sub>|</sub><sub>x</sub><sub>3</sub>	**DIAGONAL
@@ -2977,7 +2977,7 @@ SLVAD2&rarr;		LDA<sub>x</sub><sub>2</sub><sub>|</sub><sub>x</sub><sub>3</sub>	**
 		LDA<sub>x</sub><sub>1</sub><sub>S</sub><sub>|</sub><sub>&beta;</sub><sub>x</sub><sub>3</sub>	**NEXT NON REDUCED TERM
 		MUL<sub>y</sub><sub>1</sub>K	**FUTURE DIAG IN CONSTANT
 		DIV<sub>x</sub><sub>2</sub><sub>|</sub><sub>x</sub><sub>3</sub>	**DIAGONAL
-		JOV SLVAD9	[really 9?]
+		JOV SLVAD9	[best guess: 9]
 SLVAD3&rarr;		STA<sub>x</sub><sub>2</sub><sub>|</sub><sub>y</sub><sub>1</sub>	**EQUATION ENTRY MAY BE ZERO
 		DEX<sub>x</sub><sub>3</sub>K+1
 		<sup>-</sup><sup>1</sup>JPX<sub>x</sub><sub>2</sub>SLVAD2
@@ -3020,10 +3020,10 @@ SLVAD9&rarr;		SCA {-2,}	**OVERFLOW IN FIGURING CONSTANT
 		<sup>-</sup><sup>1</sup>JPX<sub>x</sub><sub>2</sub>#-3
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=69 doc_page=219 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=69 doc_page=219 type=macros proof=1]
 [Page header: "HHL APY5 022"]
 
-		JPQ SLVAD7-8	[really 8?]
+		JPQ SLVAD7-2	[best guess: 2, not particularly legible]
 &#9755;&#9755;EMD
 
 &#9755;&#9755;DEF SOLVEM1
@@ -3037,7 +3037,7 @@ SLVAD9&rarr;		SCA {-2,}	**OVERFLOW IN FIGURING CONSTANT
 		JPQ #+3
 		ADD<sub>x</sub><sub>3</sub>#
 		EXA B
-		<sup>-</sup><sup>1</sup>JPX<sub>x</sub><sub>3</sub>#-1
+		<sup>-</sup><sup>1</sup>JPX<sub>x</sub><sub>3</sub>#-2
 		STB C
 		<sup>1</sup><sup>6</sup>LDB A
 		SCB {-9.,}
@@ -3051,7 +3051,7 @@ SOLVX&rarr;		JPQ #
 &#9755;&#9755;EMD
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=70 doc_page=220 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=70 doc_page=220 type=main proof=1]
 [Page header: "HHL APY5 023"]
 
  200060|
