--- a/sk2.html
+++ b/sk2.html
@@ -3485,7 +3485,7 @@ LAST&rarr;		ZZLAST
 [Page header: "HHL LYUO 003"]
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=82 doc_page=232 type=equalities]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=82 doc_page=232 type=equalities proof=1]
 [Page header: "HHL LYUO 004"]
 
 47LITEIT= 200050
@@ -3536,12 +3536,12 @@ GETIT= 7        **MASTER FORMATION SUBROUTINE
 HOVS= 15&times;MASBL+PICTURES
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=83 doc_page=233 type=equalities]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=83 doc_page=233 type=equalities proof=1]
 [Page header: "HHL LYUO 005"]
 
 HOWBIG= 6       **MASTER SCSZ COMPUTATION
 HOVP1= 10       **FIRST HORIZ OR VERT POINT
-HOVP2= 12       **SECOND HO1IZ OR VERT POINT    [sic, HORIZ]
+HOVP2= 12       **SECOND HO1IZ OR VERT POINT    [sic]
 HOVCODE= 14     **HORIZ=1, VERTICAL=2, EITHER=0
 HOLDERS= 2&times;SMASBL+LIST+1
 
@@ -3581,7 +3581,7 @@ MOVED=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 200034
 MASTERS= LIST+1
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=84 doc_page=234 type=equalities]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=84 doc_page=234 type=equalities proof=1]
 [Page header: "HHL LYUO 006"]
 
 MERGERS= 10&times;SMASBL+LIST+1
@@ -3626,11 +3626,11 @@ PINS= 14        **INSTANCES OF THIS PICTURE
 PSIZE= 16       **SIZE OF THIS PICTURE
 PNAME= 17       **NAME OF PICTURE, 36 BITS
 PSAVE= 20       **6 REGISTERS TO SAVE IN PICTURE
-PLS= 14 		**LINES ND CIRCLES ON THIS POINT
+PLS= 14 		**LINES ND CIRCLES ON THIS POINT	[sic]
 PBOCC= 10       **CENTER OF POINT ON CIRCLE
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=85 doc_page=235 type=equalities]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=85 doc_page=235 type=equalities proof=1]
 [Page header: "HHL LYUO 007"]
 
 PBOCS= 12       **START OF POINT ON CIRCLE
@@ -3679,7 +3679,7 @@ VORD= 6         **ORDERING OF VARIABLES
 VFLW= 10        **CONSTRAINTS WHICH THIS VARIABLE IS TO SATISFY
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=86 doc_page=236 type=equalities]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=86 doc_page=236 type=equalities proof=1]
 [Page header: "HHL LYUO 010"]
 
 VARIABLES= 1&times;SMASBL+LIST+1
@@ -3690,7 +3690,7 @@ WHERE= 12       **LOCATION OF THING IN PICTURE
 &alpha;= 1
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=87 doc_page=237 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=87 doc_page=237 type=macros proof=1]
 [Page header: "HHL LYUO 011"]
 
 &#9755;&#9755;DEF EXAMINE|&alpha;&rarr;B
@@ -3702,7 +3702,7 @@ STE B
 &#9755;&#9755;DEF NORMALIZE|P&rarr;C/S&times;F=R&rarr;Q
 LDA P		**POINT P AT
 SUB C		**CENTER C TO BE
-SAB {-(F),}	**NORMALIZED TO 2<sup>F</sup>&times;S [F appears to be superscripted?]
+SAB {-(F),}	**NORMALIZED TO 2<sup>F</sup>&times;S
 hJOV Q		**AND IF OUT, GO TO
 DIV S		**Q, LEAVE RESULT
 hJOV Q-(S)+(S)	**IN R
@@ -3746,7 +3746,7 @@ COM A
 STA Q
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=88 doc_page=238 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=88 doc_page=238 type=macros proof=1]
 [Page header: "HHL LYUO 012"]
 
 &#9755;&#9755;EMD
@@ -3775,7 +3775,7 @@ hJOV U+(S)-(S)
 STA B+(R)-(R)
 LDA P
 SUB Q
-hJOV U+(Q)-(Q)
+hJOV U-(Q)+(Q)
 hJPQ CACT
 STA T
 &#9755;&#9755;EMD
@@ -3801,7 +3801,7 @@ STB S+1
 &#9755;&#9755;EMD
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=89 doc_page=239 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=89 doc_page=239 type=macros proof=1]
 [Page header: "HHL LYUO 013"]
 
 &#9755;&#9755;DEF SUMM&equiv;P&rarr;Q=R&rarr;S
@@ -3856,12 +3856,12 @@ NOA S
 SKN<sub>4</sub><sub>.</sub><sub>9</sub>D
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=90 doc_page=240 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=90 doc_page=240 type=macros proof=1]
 [Page header: "HHL LYUO 014"]
 
 JPQ #+3
 SCA D
-JPQ #+?
+JPQ #+5		[best guess: 5, as it has to be a small digit, for the jump to remain in the macro.]
 EXA R
 COM D
 SCA D
@@ -3881,7 +3881,7 @@ STB R+1
 
 &#9755;&#9755;DEF LLCROSSP&equiv;P&rarr;Q=R&rarr;S
 DPX<sub>P</sub>A
-<sup>2</sup>DPX<sub>Q</sub>A		[guessing this <sup>2</sup> based on previous def]
+<sup>2</sup>DPX<sub>Q</sub>A		[best guess: <sup>2</sup>, based on the previous def.]
 hJPQ INTOL
 hJOV S
 STA R
