--- a/sk.html
+++ b/sk.html
@@ -3808,7 +3808,7 @@ IPCOTP= 16      **INSTANCE-POINT CONSTRAINTS WITH THIS VIRGIN
 
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=86 doc_page=84 type=equalities proof=1]
-[Page header: "LMH GX7A 007" proof=1]
+[Page header: "LMH GX7A 007"]
 
 IWHAT= 14       **WHAT PIC THIS IS INSTANCE OF
 ISIZE= 16       ** R
@@ -3855,7 +3855,7 @@ NLIST= 23000	**MODEL EMPTY LIST STRUCTURE
 
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=87 doc_page=85 type=equalities proof=1]
-[Page header: "LMH GX7A 010" proof=1]
+[Page header: "LMH GX7A 010"]
 
 NUMBERS= 10&times;MASBL+PICTURES
 NTOSHO= 14      ** SCALER TO BE SHOWN
@@ -3905,7 +3905,7 @@ SCCEN= 200035
 
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=88 doc_page=86 type=equalities proof=1]
-[Page header: "LMH GX7A 011" proof=1]
+[Page header: "LMH GX7A 011"]
 
 SCSZ= 200034
 SPECB= 2        **SPECIFIC BLOCKS
@@ -3957,7 +3957,7 @@ TX2TOG= 377727
 
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=89 doc_page=87 type=equalities proof=1]
-[Page header: "LMH GX7A 012" proof=1]
+[Page header: "LMH GX7A 012"]
 
 [*TAFNOTREADY=]
 [*TAFIOASTART&beta;=]
